Chrome fix align end

--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ h4, p {
 	display: inline-flex;
 	margin-top: 5px;
 	margin-bottom: 5px;
-	justify-content: end;
+	justify-content: flex-end;
 	width: 100%;
 }
 
